--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -33,7 +33,7 @@
                   <div class="full">
                     <div class="center-desk">
                       <div class="logo">
-                        <a href="inicio"><img src="/images/logo.png" alt="#" /></a>
+                        <a href="/"><img src="/images/logo.png" alt="#" /></a>
                       </div>
                     </div>
                   </div>
@@ -44,7 +44,7 @@
                     <div class="limit-box">
                       <nav class="main-menu ">
                         <ul class="menu-area-main">
-                          <li> <a href="inicio">Inicio</a> </li>
+                          <li> <a href="/">Inicio</a> </li>
                       
                           <li class="active"> <a href="about">Sobre nosotros</a> </li>
 
